--- a/Paimon-Desk-cpp/Paimon-Desk-cpp.vcxproj.filters
+++ b/Paimon-Desk-cpp/Paimon-Desk-cpp.vcxproj.filters
@@ -75,5 +75,11 @@
     <Image Include="..\..\..\..\OneDrive\Documents\Code Projects\paimon-desk-c\entity\paimonRight.gif">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\..\..\..\OneDrive\Documents\Code Projects\paimon-desk-c\res\icon.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="icon1.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
